[gd_scene load_steps=14 format=3 uid="uid://c8thehv1woo4s"]

[ext_resource type="Script" uid="uid://cdfla3r2u631f" path="res://scenes/game.gd" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://denpngadj7tqh" path="res://scenes/hud.gd" id="2_e2o6t"]
[ext_resource type="Theme" uid="uid://dmcn8ld0wnxje" path="res://interface/theme.tres" id="3_feb5d"]
[ext_resource type="FontFile" uid="uid://bcoio51qypcjt" path="res://assets/Lora-VariableFont_wght.ttf" id="4_iywne"]
[ext_resource type="Shader" uid="uid://de8scoecvns1c" path="res://shaders/squares.gdshader" id="4_lbhrr"]

[sub_resource type="FontVariation" id="FontVariation_p57ef"]
base_font = ExtResource("4_iywne")
variation_opentype = {
2003265652: 500
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iywne"]
render_priority = 0
shader = ExtResource("4_lbhrr")

[sub_resource type="PlaneMesh" id="PlaneMesh_lnu2h"]
material = SubResource("ShaderMaterial_iywne")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lnu2h"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lbhrr"]
noise = SubResource("FastNoiseLite_lnu2h")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iywne"]
sky_cover = SubResource("NoiseTexture2D_lbhrr")

[sub_resource type="Sky" id="Sky_p57ef"]
sky_material = SubResource("ProceduralSkyMaterial_iywne")

[sub_resource type="Environment" id="Environment_e2o6t"]
background_mode = 2
sky = SubResource("Sky_p57ef")

[node name="Game" type="Node3D"]
script = ExtResource("1_e2o6t")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_feb5d")
script = ExtResource("2_e2o6t")

[node name="MoneyPanel" type="PanelContainer" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -143.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="MoneyLabel" type="Label" parent="HUD/MoneyPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "$0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpgradeMenu" type="Control" parent="HUD"]
custom_minimum_size = Vector2(500, 340)
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 520.0
offset_bottom = 338.0

[node name="PanelContainer" type="PanelContainer" parent="HUD/UpgradeMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/UpgradeMenu/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_p57ef")
theme_override_font_sizes/font_size = 40
text = "Upgrades"

[node name="SpeedUpgrade" type="HBoxContainer" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/SpeedUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"

[node name="SpeedLabel" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/SpeedUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "Value"

[node name="SpeedButton" type="Button" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/SpeedUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "$10"

[node name="ItemsUpgrade" type="HBoxContainer" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/ItemsUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Items"

[node name="ItemsLabel" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/ItemsUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "Value"

[node name="ItemsButton" type="Button" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/ItemsUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "$10"

[node name="LoopUpgrade" type="HBoxContainer" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/LoopUpgrade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Loop Bonus"

[node name="LoopLabel" type="Label" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/LoopUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "Value"

[node name="LoopButton" type="Button" parent="HUD/UpgradeMenu/PanelContainer/VBoxContainer/LoopUpgrade"]
unique_name_in_owner = true
layout_mode = 2
text = "$10"

[node name="ExitButton" type="Button" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 72.0
grow_horizontal = 0
text = "Exit To Menu"

[node name="ItemContainer" type="Node3D" parent="."]

[node name="TrackContainer" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.70710677, -0.49999997, 0.49999997, 0, 0.70710677, 0.70710677, -0.70710677, -0.49999997, 0.49999997, 8.5, 8, 8.5)
projection = 1
size = 12.0
near = 2.0
far = 21.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(26.996927, 0, 0, 0, 1.0000011, 0, 0, 0, 25.777443, 0, 0, 0)
mesh = SubResource("PlaneMesh_lnu2h")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e2o6t")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.70710677, 0.49999997, -0.49999997, 0, 0.70710677, 0.70710677, 0.70710677, 0.49999997, -0.49999997, 0, 7.247781, 0)
light_energy = 0.1
light_cull_mask = 4293918722
shadow_enabled = true

[connection signal="pressed" from="HUD/UpgradeMenu/PanelContainer/VBoxContainer/SpeedUpgrade/SpeedButton" to="HUD" method="_on_speed_button_pressed"]
[connection signal="pressed" from="HUD/UpgradeMenu/PanelContainer/VBoxContainer/ItemsUpgrade/ItemsButton" to="HUD" method="_on_items_button_pressed"]
[connection signal="pressed" from="HUD/UpgradeMenu/PanelContainer/VBoxContainer/LoopUpgrade/LoopButton" to="HUD" method="_on_loop_button_pressed"]
[connection signal="pressed" from="HUD/ExitButton" to="HUD" method="_on_exit_button_pressed"]
